# tonic

tonic/: Cargo.toml
tonic-build/: Cargo.toml
tonic-build/src/: client.rs  flatbuffers.rs  lib.rs  prost.rs  server.rs
tonic-examples/: Cargo.toml
tonic-interop/: Cargo.toml
tonic/src/: codegen.rs
tonic/src/codec/: flatbuffers.rs  mod.rs
tonic/src/transport/: endpoint.rs  server.rs
tonic/src/transport/service/: tls.rs
