[package]
name = "tonic-build"
version = "0.1.0-alpha.6"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic/0.1.0-alpha.5/tonic/"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = """
Codegen module of `tonic` gRPC implementation.
"""
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]


[dependencies]
prost-build = { version = "0.5", optional = true }
flatbuffers-build = { path = "../../flatbuffers-build", optional = true }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["transport", "rustfmt"]
rustfmt = []
transport = []
prost = ["prost-build"]
flatbuffers = ["flatbuffers-build"]

[package.metadata.docs.rs]
all-features = true
